Fixed: Alignment and horizontal scroll issue

--- a/src/components/home/distributionModel/package/style.scss
+++ b/src/components/home/distributionModel/package/style.scss
@@ -2,6 +2,7 @@
 
 #DistributionPackage {
   margin-top: rem(100);
+  overflow-x: clip;
 
   @include breakpoint(medium) {
     margin-top: rem(40);
